# tradify-Fast

./: pyproject.toml
src/: .env
src/tradify/: currencies.json  db.py  server.py  utils.py
src/tradify/auth/: service.py
src/tradify/auth/schema/: __init__.py  auth.py
src/tradify/currency/: services.py
src/tradify/currency/models/: __init__.py  currency.py
src/tradify/notification/email_templates/: otpRequest.html
src/tradify/transaction/: routes.py  service.py
src/tradify/transaction/models/: __init__.py  transaction.py
src/tradify/transaction/schema/: __init__.py  transaction.py
src/tradify/user/: routes.py  service.py
src/tradify/user/models/: __init__.py  user.py
src/tradify/user/schema/: __init__.py  user.py
src/tradify/wallet/: routes.py  service.py
src/tradify/wallet/models/: __init__.py  balance.py  wallet.py
src/tradify/wallet/schema/: __init__.py  wallet.py
